<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wind Energy</string>
    <string name="wind">Wind\nEnergy</string>
    <string name="energy">Energy</string>
    <string name="action_settings">Settings</string>
	<string name="start_button_desc">Start Button of the main menu. Will take you to the model</string>
	<string name="concept_button_desc">Concept Button of the main menu. Will take you to concept page</string>
	<string name="activity_button_desc">Activity Button of the main menu</string>
	<string name="exit_button_desc">Exit Button of the main menu</string>
	<string name="info_button_desc">Info Button of the main menu</string>   
	<string name="start">Start</string>
	<string name="information">Information</string>
	<string name="concept">Concept</string>
	<string name="activity">Activity</string>
	<string name="exit">Exit</string>
	
	<string name="inspiration_title">THE INSPIRATION</string>
	<string name="inspiration">Technology is becoming more advanced every day. An important application of technology in our day to day lives is its combination with education. There is a rise in the use of e-learning to educate students. Our application ‘Wind Energy’ uses low cost devices for the very same purpose, due to which many children all over India can afford to learn.
One of the most important energy sources is wind. Wind energy is converted to electricity using windmills to supply entire villages. Furthermore, wind cannot be depleted and does not require fuel, thus is proves to be a great alternative for providing energy. It is necessary for students to understand how vital this source of energy is.
Every education system teaches students about the importance of environmental protection. Learning about the conversion of energy to electricity, through 3D simulations, will provide students with a very interactive learning platform. On the other hand, mechanical engineers are already aware of the basic process of energy conversion. Being able to view the internal parts of a windmill from any desired angle and learn about their functions, will prove to be  highly beneficial, since they will never otherwise get the opportunity to experiment with real-life windmills.
    
	</string>
	<string name="journey_title">THE JOURNEY</string>
	<string name="journey">Our project aims to simplify teaching and enhance learning by making an interactive educational application about wind energy. When we learnt that the Indian Institute of Technology, Bombay, has taken an initiative to deploy similar educational systems for the Indian masses using the Aakash Tablet, we approached them with our idea and have developed our application under their guidance. With the help of the experienced mentors at the Aakash Laboratory, we were trained to develop a professional work ethic and complete our work within a timeline. Any challenges we faced, were solved as a team. The collaboration with IIT-B has taught us about discipline and team work and has simultaneously helped us enhance our existing technical skills. 
	The entire experience has helped us reach our goal.
	</string>
	<string name="goal_title">THE GOAL</string>    
	<string name="goal">Our application is an attempt to improve methods of learning. Using 3D models, we want to give students a realistic view of windmills, their use and their internal components. Such a life-like encounter with wind energy will give them the opportunity to learn in an interactive manner. 
	Simultaneously, the application stresses on the importance of renewable sources of energy and how their efficient use can help us save our planet.
	</string>
	
	<string name="wind_background">Wind energy has been harnessed for thousands of years and is one of the oldest forms of renewable energy. 
	    With a rise in industrialization, people began adapting windmills into wind turbines used for generating electricity.</string>
	<string name="windtoelec">Wind blows towards the blades with kinetic energy. The aerodynamic force of the wind causes the blades to rotate, which then causes the rotor to turn. The blades turn a low-speed shaft inside the windmill: gears connect the low speed shaft of the rotor with a high speed shaft that drives a generator. 
	    The rapidly spinning shaft drives the generator to produce electric energy.
	     Electricity from the generator goes to a power station which converts it to the right voltage for the electricity grid. Following this, electricity is transferred to transmission towers and the electricity is then supplied to houses for usage!</string>
	<color name="white">#FFFFFF</color>
</resources>
